--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<header>
+<header th:fragment="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a th:href="@{/}" class="navbar-brand">Home</a>
