--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{bootstrap.min.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{styles.css}">
 
     <title>FIBROLASER</title>
@@ -13,7 +13,7 @@
 
 <body>
 
-<header th:fragment="header">
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a th:href="@{/}" class="navbar-brand">Home</a>
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a th:href="@{/estadospedidos}"  class="nav-link text-white">Estados Ped</a></li>
                     <li class="nav-item"><a th:href="@{/usuarios}"  class="nav-link text-white">Usuarios</a></li>
                     <li class="nav-item"><a th:href="@{/roles}"  class="nav-link text-white">Roles</a></li>
+                    <li class="nav-item">index raiz</li>
 
                 </ul>
 
@@ -43,7 +44,7 @@
 </header>
 
 
-<script th:src="@{bootstrap.bundle.min.js}"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script th:src="@{validation.js}"></script>
 </body>
 
